--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+GitPython
 coloredlogs
 numpy
 loguru
@@ -7,6 +8,8 @@ scipy
 norbert
 asteroid>=0.5.0
 torch
+pytorch_lightning
+voicefixer
 
 librosa
 torchlibrosa==0.0.7
@@ -22,5 +25,4 @@ diffq
 soundfile
 typing
 pynvml
-GitPython
 progressbar
